HelloUltraviolet/Fixtures/RejectedSource/SourceText/LeadingBOMEmbeddedBOM/Source/Main.uv
﻿public procedure leadingBOMEmbeddedBOMReference() -> i32 {
    return 1
}
